Fix tabs visibility on media upload

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -1465,7 +1465,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
 }
 
 #media-browser-tabset #branding {
-  height: 30px;
+  height: 30px !important;
 }
 
 /*********************************************************************/
